--- a/settings.json
+++ b/settings.json
@@ -9,14 +9,14 @@
 	"auto_leave_msg": true,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "62887435047326",
-	"ownerNumberr": "62887435047326",
-	"cr": "ᴹᴿ᭄ ZeeoneOfcོ ×፝֟͜×",
-	"ownername": "ᴹᴿ᭄ ZeeoneOfcོ ×፝֟͜×",
-	"botname":"Alphabot",
+	"ownerNumber": "6283871822478",
+	"ownerNumberr": "6283871822478",
+	"cr": "ᴹᴿ᭄ LeenzOfcོ ×፝֟͜×",
+	"ownername": "ᴹᴿ᭄ Leenzofcོ ×፝֟͜×",
+	"botname":"Leenzbot",
 	"thumb":"thumbnail_1.jpg",
 	"thumbnail":"thumbnail_2_1.jpg",
 	"fakethumb":"thumbnail_1.jpg", 
 	"donasi":"donasi.jpg",
-	"fake": " 「  ALPHABOT  」\nCreated By ᴹᴿ᭄ ZeeoneOfcོ ×፝֟͜×"
+	"fake": " 「  LEENZBOT  」\nCreated By ᴹᴿ᭄ LeenzOfcོ ×፝֟͜×"
 }
